--- a/index.html
+++ b/index.html
@@ -1,50 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>W3.CSS Template</title>
+<title>Alpha Release</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" id="theme-style">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
-body, html {
-  height: 100%;
-  color: #777;
-  line-height: 1.8;
-}
-
-/* Create a Parallax Effect */
-.bgimg-1, .bgimg-2, .bgimg-3 {
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.bgimg-1 {
-  background-image: url('img/cover.jpg');
-  min-height: 100%;
-  height: 50%;
-}
-
-.w3-wide {letter-spacing: 10px;}
-.w3-hover-opacity {cursor: pointer;}
-
-/* Turn off parallax scrolling for tablets and phones */
-@media only screen and (max-device-width: 1600px) {
-  .bgimg-1, .bgimg-2, .bgimg-3 {
-    background-attachment: scroll;
-    min-height: 400px;
-  }
-}
-
-.dark-mode {
-  background-color: rgb(33, 33, 33);
-  color: lightgray;
-}
-</style>
+<link rel="stylesheet" href="style.css">
+<script src="https://d3js.org/d3.v7.min.js"></script>
+<script src="https://colorbrewer2.org/export/colorbrewer.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3-annotation/2.5.1/d3-annotation.min.js"></script>
 </head>
 <body>
 
@@ -55,7 +22,6 @@ body, html {
         <i class="fa fa-bars"></i>
       </a>
       <a href="#home" class="w3-bar-item w3-button">HOME</a>
-      <a href="javascript:void(0);" onclick="toggleTheme()" class="w3-bar-item w3-button w3-right">Toggle Theme</a> <!-- This line is added -->
     </div>
     <!-- Navbar on small screens -->
     <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium">
@@ -91,6 +57,14 @@ body, html {
     </div>
 </div>
 
+<h2 style="text-align: center;">US GDP Components (1970 - 2020)</h2>
+<div id="streamgraph"></div>
+<script type="module" src="streamgraph/script.js"></script>
+
+<br><br><br><br><br><br>
+
+
+
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacityZ">
   <a href="#home" class="w3-button w3-black"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
@@ -103,23 +77,6 @@ function onClick(element) {
   document.getElementById("modal01").style.display = "block";
   var captionText = document.getElementById("caption");
   captionText.innerHTML = element.alt;
-}
-
-// Change style of navbar on scroll
-window.onscroll = function() {myFunction()};
-function myFunction() {
-    var navbar = document.getElementById("myNavbar");
-    if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
-        navbar.className = "w3-bar" + " w3-card" + " w3-animate-top" + " w3-black";
-    } else {
-        navbar.className = navbar.className.replace(" w3-card w3-animate-top w3-black", "");
-    }
-}
-
-// Function to toggle between dark mode and light mode
-function toggleTheme() {
-    var element = document.body;
-    element.classList.toggle("dark-mode");
 }
 </script>
 
