--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="style.css">
+
+<!--  Libraries -->
 <script src="https://d3js.org/d3.v7.min.js"></script>
 <script src="https://colorbrewer2.org/export/colorbrewer.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-annotation/2.5.1/d3-annotation.min.js"></script>
+
+<!-- Graphs -->
+<script type="module" src="streamgraph/script.js"></script>
+<script type="module" src="multiline/script.js"></script>
+<script type="module" src="bar-seq/script.js"></script>
+<script type="module" src="bar-div/script.js"></script>
+<script type="module" src="line/script.js"></script>
 </head>
 <body>
 
@@ -57,13 +66,33 @@
     </div>
 </div>
 
-<h2 style="text-align: center;">US GDP Components (1970 - 2020)</h2>
-<div id="streamgraph"></div>
-<script type="module" src="streamgraph/script.js"></script>
+<div class="tooltip"></div>
 
 <br><br><br><br><br><br>
 
+<h2 style="text-align: center;">U.S. GDP Components (1970 - 2020)</h2>
+<div id="streamgraph"></div>
 
+<br><br><br><br><br><br>
+
+<h2 style="text-align: center;">U.S. Imports and Exports (2000 - 2021)</h2>
+<div id="multiline"></div>
+
+<br><br><br><br><br><br>
+
+<h2 style="text-align: center;">Comparison of U.S. Goods Imports and Exports (1999-2021)</h2>
+<div style="text-align: center;" id="year-dropdown"></div>
+<div id="bar-seq"></div>
+
+<br><br><br><br><br><br>
+
+<h2 style="text-align: center;">U.S. Inflation Rate (1914 - 2022)</h2>
+<div id="bar-div"></div>
+
+<br><br><br><br><br><br>
+
+<h2 style="text-align: center;">U.S. Minimum Wage (1939 - 2023)</h2>
+<div id="line"></div>
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacityZ">
