Add GDP world map

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-annotation/2.5.1/d3-annotation.min.js"></script>
 
 <!-- Graphs -->
+<script type="module" src="world-map/script.js"></script>
 <script type="module" src="streamgraph/script.js"></script>
 <script type="module" src="multiline/script.js"></script>
 <script type="module" src="bar-seq/script.js"></script>
@@ -67,6 +68,11 @@
 </div>
 
 <div class="tooltip"></div>
+
+<br><br><br><br><br><br>
+
+<h2 style="text-align: center;">Average GDP per Capita by Country (1970-2017)</h2>
+<svg id="world-map" width="1000" height="1200"></svg>
 
 <br><br><br><br><br><br>
 
