--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <script type="module" src="bar-seq/script.js"></script>
 <script type="module" src="bar-div/script.js"></script>
 <script type="module" src="line/script.js"></script>
+<script type="module" src="scatterplot/script.js"></script>
 </head>
 <body>
 
@@ -99,6 +100,12 @@
 
 <h2 style="text-align: center;">U.S. Minimum Wage (1939 - 2023)</h2>
 <div id="line"></div>
+
+<br><br><br><br><br><br>
+<h2 style="text-align: center;">U.S. Unemployment vs Inflation Rate (1947 - 2021)</h2>
+<div id="scatterplot"></div>
+
+<br><br><br><br><br><br>
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacityZ">
