Update button and dropdown

--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
 <div id="line"></div>
 
 <br><br><br><br><br><br>
+
 <h2 style="text-align: center;">U.S. Unemployment vs Inflation Rate (1947 - 2021)</h2>
+<button id="toggleCurve">Toggle Curve</button>
 <div id="scatterplot"></div>
 
 <br><br><br><br><br><br>
@@ -111,16 +113,6 @@
 <footer class="w3-center w3-black w3-padding-64 w3-opacityZ">
   <a href="#home" class="w3-button w3-black"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
 </footer>
-
-<script>
-// Modal Image Gallery
-function onClick(element) {
-  document.getElementById("img01").src = element.src;
-  document.getElementById("modal01").style.display = "block";
-  var captionText = document.getElementById("caption");
-  captionText.innerHTML = element.alt;
-}
-</script>
 
 </body>
 </html>
