--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Alpha Release</title>
+<title>Beta Release</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" id="theme-style">
@@ -14,6 +14,7 @@
 <script src="https://colorbrewer2.org/export/colorbrewer.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-annotation/2.5.1/d3-annotation.min.js"></script>
+<script src="https://unpkg.com/scrollama"></script>
 
 <!-- Graphs -->
 <script type="module" src="world-map/script.js"></script>
