--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
     scroller.setup({
         step: '.w3-content',
         offset: 0.5,
-        debug: true, // Enable debug mode for console logs
+        // debug: true,
     })
-    .onStepEnter(handleStepEnter); // Define the callback function
+    .onStepEnter(handleStepEnter);
 
     // Callback function to handle step enter event
     function handleStepEnter(response) {
