Write the about section

--- a/index.html
+++ b/index.html
@@ -63,16 +63,30 @@
 <!-- About -->
 <div class="w3-content w3-container w3-padding-64" id="about">
     <h2 class="w3-center">What's this project about?</h2>
+    <h3>Motivation</h3>
     <div class="m6 w3-hide-small w3-padding-large">
-        <p>Welcome to my final project for data visualization class! In this website, I'm exploring the vast landscape of the U.S. economy through the lens of data visualization. We all know that money plays a crucial role in shaping our world, and recent events such as the tech layoffs during the COVID-19 pandemic and the economic transformations in cities like San Francisco have captured my attention. I'm passionate about understanding how these economic shifts impact not only my life but also my community. Through thorough analysis of economic data and its historical trajectory, I aim to uncover meaningful patterns that can aid me in navigating future changes with greater insight. Given that economic insights are often communicated through visual representations, this project offers an exciting opportunity to deepen my understanding of both economics and data visualization techniques. Join me on this journey as we explore the intricacies of the U.S. economy and its profound influence on our lives.</p>
+        <p>Welcome to my data viz website! In here, we will be exploring the vast landscape of the U.S. economy through the lens of data visualization. We all know that money plays a crucial role in shaping our world, and recent events such as the tech layoffs during the COVID-19 pandemic and the economic transformations in cities like San Francisco have captured my attention. I'm passionate about understanding how these economic shifts impact not only my life but also my community.</p>
     </div>
+    <h3>Purpose</h3>
+    <div class="m6 w3-hide-small w3-padding-large">
+        <p>Through thorough analysis of economic data and its historical trajectory, I aim to uncover meaningful patterns that can aid me in navigating future changes with greater insight. Given that economic insights are often communicated through visual representations, this project offers an exciting opportunity to deepen my understanding of both economics and data visualization techniques. Through my engaging narrative and immersive data visualizations, I aim to provide you with a comprehensive understanding of the US economy's evolution and dynamics over time.</p>
+    </div>
+    <h3>Features</h3>
+    <div class="m6 w3-hide-small w3-padding-large">
+        <p>We kick off by delving into the nation's Gross Domestic Product (GDP) over the past half-century, showcasing its growth trajectory through a visually rich streamgraph. Additionally, I provide a choropleth world map depicting GDP per capita, allowing you to contextualize the US economy within the global landscape.<br><br>Continuing our exploration, I delve into the dynamics of imports and exports using a comprehensive multiline chart. Through paired bar charts featuring sequential color schemes, I dissect major categories of imports and exports for specific years, offering insights into trade patterns and trends.<br><br>Transitioning to the realm of inflation, I present a diverging bar chart showcasing historical inflation rates. By aligning these rates with significant historical events, you gain a deeper understanding of the economic forces at play.<br><br>Furthermore, I investigate unemployment rates, drawing correlations between unemployment and inflation—a commonly discussed economic relationship.<br><br>Last but not least, I unveil a scatterplot comparing inflation rates and unemployment rates, inviting you to explore the validity of the Phillips curve hypothesis, which posits an inverse relationship between inflation and unemployment.</p>
+    </div>
+    <h3>Data</h3>
+    <div class="m6 w3-hide-small w3-padding-large">
+        <p>All data utilized for this project has been meticulously sourced from <a href="https://usafacts.org/economy/" style="font-size: 20px; color: #8cff79;">usafacts.org</a>.</p>
+    </div>
+    <h3>Click on a section from the navbar or start scrolling to explore.</h3>
 </div>
 
 <!-- GDP -->
 <div class="bgimg-2 w3-display-container w3-opacity-min" id="gdp">
     <div class="w3-display-middle" style="white-space:nowrap; bottom: 50%;">
         <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">
-            Wonder how much money the U.S. is making?
+            How much money is the U.S. making?
         </span>
     </div>
 </div>
@@ -88,7 +102,7 @@
 <div class="bgimg-3 w3-display-container w3-opacity-min" id="trade">
     <div class="w3-display-middle" style="white-space:nowrap; bottom: 50%;">
         <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">
-            Want to know the ins and outs of the trade?
+            What are the ins and outs?
         </span>
     </div>
 </div>
@@ -105,7 +119,7 @@
 <div class="bgimg-4 w3-display-container w3-opacity-min" id="indicators">
     <div class="w3-display-middle" style="white-space:nowrap; bottom: 50%;">
         <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">
-            Curious about whether our economy is getting better or worse?
+            Is it getting better or worse?
         </span>
     </div>
 </div>
