Add tooltips comments

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
     <h3>Features</h3>
     <div class="m6 w3-hide-small w3-padding-large">
-        <p>We kick off by delving into the nation's Gross Domestic Product (GDP) over the past half-century, showcasing its growth trajectory through a visually rich streamgraph. Additionally, I provide a choropleth world map depicting GDP per capita, allowing you to contextualize the US economy within the global landscape.<br><br>Continuing our exploration, I delve into the dynamics of imports and exports using a comprehensive multiline chart. Through paired bar charts featuring sequential color schemes, I dissect major categories of imports and exports for specific years, offering insights into trade patterns and trends.<br><br>Transitioning to the realm of inflation, I present a diverging bar chart showcasing historical inflation rates. By aligning these rates with significant historical events, you gain a deeper understanding of the economic forces at play.<br><br>Furthermore, I investigate unemployment rates, drawing correlations between unemployment and inflation—a commonly discussed economic relationship.<br><br>Last but not least, I unveil a scatterplot comparing inflation rates and unemployment rates, inviting you to explore the validity of the Phillips curve hypothesis, which posits an inverse relationship between inflation and unemployment.</p>
+        <p>We kick off by delving into the nation's Gross Domestic Product (GDP) over the past half-century, showcasing its growth trajectory through a visually rich streamgraph. Additionally, I provide a choropleth world map depicting GDP per capita, allowing you to contextualize the US economy within the global landscape.<br><br>Continuing our exploration, I delve into the dynamics of imports and exports using a comprehensive multiline chart. Through paired bar charts featuring sequential color schemes, I dissect major categories of imports and exports for specific years, offering insights into trade patterns and trends.<br><br>Transitioning to the realm of inflation, I present a diverging bar chart showcasing historical inflation rates. By aligning these rates with significant historical events, you gain a deeper understanding of the economic forces at play.<br><br>Furthermore, I investigate unemployment rates, drawing correlations between unemployment and inflation—a commonly discussed economic relationship.<br><br>Last but not least, I unveil a scatterplot comparing inflation rates and unemployment rates, inviting you to explore the validity of the Phillips curve hypothesis, which posits an inverse relationship between inflation and unemployment.<br><br>Note that refreshing the page on some of the charts will allow you to see it being created.</p>
     </div>
     <h3>Data</h3>
     <div class="m6 w3-hide-small w3-padding-large">
@@ -125,11 +125,14 @@
 
 <br><br><br><br><br><br>
 <h3 style="text-align: center;">U.S. Imports and Exports (2000 - 2021)</h3>
+<p style="text-align: center;">Reload page and try hovering the dots.</p>
 <div id="multiline"></div>
 <br><br><br><br><br><br>
 <h3 style="text-align: center;">Comparison of U.S. Goods Imports and Exports (1999-2021)</h3>
+<p style="text-align: center;">Hover over the bars to see the differences.</p>
 <div style="text-align: center;" id="year-dropdown"></div>
 <div id="bar-seq"></div>
+
 
 <!-- Indicators -->
 <div class="bgimg-4 w3-display-container w3-opacity-min" id="indicators">
@@ -142,12 +145,15 @@
 
 <br><br><br><br><br><br>
 <h3 style="text-align: center;">U.S. Inflation Rate (1914 - 2022)</h3>
+<p style="text-align: center;">Reload page and hover over each bar to see the exact rates.</p>
 <div id="bar-div"></div>
 <br><br><br><br><br><br>
 <h3 style="text-align: center;">U.S. Minimum Wage (1939 - 2023)</h3>
+<p style="text-align: center;">Reload page and try hovering the dots.</p>
 <div id="line"></div>
 <br><br><br><br><br><br>
 <h3 style="text-align: center;">U.S. Unemployment vs Inflation Rate (1947 - 2021)</h3>
+<p style="text-align: center;">Reload page and hover over each dot to see the year.</p>
 <button id="toggleCurve">Toggle Curve</button>
 <div id="scatterplot"></div>
 
