--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <h2 class="w3-center">What is this project about?</h2>
     <h3>Motivation</h3>
     <div class="m6 w3-hide-small w3-padding-large">
-        <p>Welcome to my data viz website! In here, you will be exploring the vast landscape of the U.S. economy through the lens of data visualization. We all know that money plays a crucial role in shaping our world, and recent events such as the tech layoffs during the COVID-19 pandemic and the economic transformations in cities like San Francisco have captured my attention. I'm passionate about understanding how these economic shifts impact not only my life but also my community.</p>
+        <p>Welcome! In here, you will be exploring the vast landscape of the U.S. economy through the lens of data visualization. We all know that money plays a crucial role in shaping our world, and recent events such as the tech layoffs during the COVID-19 pandemic and the economic transformations in cities like San Francisco have captured my attention. I'm passionate about understanding how these economic shifts impact not only my life but also my community.</p>
     </div>
     <h3>Purpose</h3>
     <div class="m6 w3-hide-small w3-padding-large">
@@ -73,7 +73,7 @@
     </div>
     <h3>Features</h3>
     <div class="m6 w3-hide-small w3-padding-large">
-        <p>We kick off by delving into the nation's Gross Domestic Product (GDP) over the past half-century, showcasing its growth trajectory through a visually rich streamgraph. Additionally, I provide a choropleth world map depicting GDP per capita, allowing you to contextualize the US economy within the global landscape.<br><br>Continuing our exploration, I delve into the dynamics of imports and exports using a comprehensive multiline chart. Through paired bar charts featuring sequential color schemes, I dissect major categories of imports and exports for specific years, offering insights into trade patterns and trends.<br><br>Transitioning to the realm of inflation, I present a diverging bar chart showcasing historical inflation rates. By aligning these rates with significant historical events, you gain a deeper understanding of the economic forces at play.<br><br>Furthermore, I investigate unemployment rates, drawing correlations between unemployment and inflation—a commonly discussed economic relationship.<br><br>Last but not least, I unveil a scatterplot comparing inflation rates and unemployment rates, inviting you to explore the validity of the Phillips curve hypothesis, which posits an inverse relationship between inflation and unemployment.<br><br>Note that refreshing the page on some of the charts will allow you to see it being created.</p>
+        <p>We kick off by delving into the nation's Gross Domestic Product (GDP) over the past half-century, showcasing its growth trajectory through a visually rich streamgraph. Additionally, I provide a choropleth world map depicting GDP per capita, allowing you to contextualize the US economy within the global landscape.<br><br>Continuing our exploration, I delve into the dynamics of imports and exports using a comprehensive multiline chart. Through paired bar charts featuring sequential color schemes, I dissect major categories of imports and exports for specific years, offering insights into trade patterns and trends.<br><br>Transitioning to the realm of inflation, I present a diverging bar chart showcasing historical inflation rates. Furthermore, I investigate unemployment rates, drawing correlations between unemployment and inflation—a commonly discussed economic relationship.<br><br>Last but not least, I unveil a scatterplot comparing inflation rates and unemployment rates, inviting you to explore the validity of the Phillips curve hypothesis, which posits an inverse relationship between inflation and unemployment.</p>
     </div>
     <h3>Data</h3>
     <div class="m6 w3-hide-small w3-padding-large">
@@ -112,7 +112,6 @@
     <p>Also, the graph shows that GDP has been growing rapidly over time. This tells us that our economy is expanding quickly. It makes us wonder if this trend will continue in the future. Our economy is always changing and evolving, sparking curiosity and questions.</p>
 </div>
 
-
 <!-- Trade -->
 <div class="bgimg-3 w3-display-container w3-opacity-min" id="trade">
     <div class="w3-display-middle" style="white-space:nowrap; bottom: 50%;">
@@ -121,9 +120,8 @@
         </span>
     </div>
 </div>
-
 <div class="m6 w3-hide-small w3-padding-large w3-content w3-container w3-padding-64">
-    <p>Now, as we journey through the halls of knowledge, let us delve into the intricate world of the US trade. Within this fascinating realm lie the fundamental concepts of imports and exports.</p>
+    <p>As we journey through the halls of knowledge, let us delve into the intricate world of the US trade. Within this fascinating realm lie the fundamental concepts of imports and exports.</p>
     <p>Imports and exports are like buying and selling between countries. When the US imports, it means it's buying stuff from other countries. These can be things like clothes, electronics, or even cars. Imports come into the US from other places.</p>
     <p>On the other hand, when the US exports, it's selling stuff to other countries. This can be anything from food to technology. Exported stuff leaves the US and goes to other countries.</p>
     <p>The trade balance is about the difference between imports and exports. If the US imports more than it exports, it's called a trade deficit. If it exports more than it imports, it's called a trade surplus.</p>
@@ -131,12 +129,12 @@
     <p>When there's a trade surplus, it means the US is making more money from exports than it's spending on imports. This can be good for the economy because it brings in more money from other countries.</p>
 </div>
 <h3 style="text-align: center;">U.S. Imports and Exports (2000 - 2021)</h3>
-<p style="text-align: center;">Reload page and try hovering the dots.</p>
+<p style="text-align: center;">Reload page and try hovering over the dots.</p>
 <div id="multiline"></div>
 <div class="m6 w3-hide-small w3-padding-large w3-content w3-container w3-padding-64">
     <p>Have you noticed the sharp decline in the years 2008 and 2009? That dip coincided with the 2008 market crash, sending shockwaves through the global economy. As a result, both US imports and exports took a hit, causing ripple effects felt around the world.</p>
     <p>See how imports consistently outweigh exports? That's a sign of a trade deficit! The difference between imports and exports is negative, indicating that the US is spending more on imports than it's earning from exports.</p>
-    <p>Now, let's dive into the different things the US buys and sells. We've got everyday stuff like electronics and clothes, which we call "general merchandise". Then there's food, drinks, and animal feed. Think grains, meats, and beverages.</p>
+    <p>Let's dive into the different things the US buys and sells. We've got everyday stuff like electronics and clothes, which we call "general merchandise". Then there's food, drinks, and animal feed. Think grains, meats, and beverages.</p>
     <p>For building and making things, there are raw materials like metals and machinery, called "industrial supplies and materials". We also invest in big equipment and machinery for businesses to grow, known as "capital goods except automotive".</p>
     <p>When it comes to cars and trucks, as well as their parts and engines, that's another big part of what we trade. Finally, there's all the stuff people buy for themselves, from gadgets to clothes, called "consumer goods except food and automotive".</p>
 </div>
@@ -146,9 +144,8 @@
 <div id="bar-seq"></div>
 <div class="m6 w3-hide-small w3-padding-large w3-content w3-container w3-padding-64">
     <p>If you've played around with the year dropdown, you might have noticed something interesting: the amount of money involved in trade has shot up over the decades. The maximum value increases by over a trillion dollars!</p>
-    <p>Now, let's take a closer look at the types of goods being traded. General merchandise seems to be leading the pack in both imports and exports. This could be because general merchandise includes a wide variety of products that people use every day, like electronics, clothing, and household items. These items are in high demand globally, driving significant trade volumes in both directions.</p>
+    <p>Let's take a closer look at the types of goods being traded. General merchandise seems to be leading the pack in both imports and exports. This could be because general merchandise includes a wide variety of products that people use every day, like electronics, clothing, and household items. These items are in high demand globally, driving significant trade volumes in both directions.</p>
 </div>
-
 
 <!-- Indicators -->
 <div class="bgimg-4 w3-display-container w3-opacity-min" id="indicators">
@@ -158,27 +155,52 @@
         </span>
     </div>
 </div>
-
-<br><br><br><br><br><br>
+<div class="m6 w3-hide-small w3-padding-large w3-content w3-container w3-padding-64">
+    <p>Let's delve into the indicators that help us understand the health of the US economy.</p>
+    <p>First on our list is the inflation rate. But what exactly is inflation rate?</p>
+    <p>Inflation rate is a measure of how fast prices are rising in an economy. It's like a gauge that tells us how much more expensive things are getting over time. When inflation is high, the prices of goods and services go up quickly, which means your money doesn't go as far. On the other hand, when inflation is low, prices rise more slowly, and your money retains its value better.</p>
+    <p>Understanding the inflation rate is crucial because it affects almost every aspect of the economy. High inflation can erode people's purchasing power, making it harder for them to afford things. It can also lead to uncertainty and instability in financial markets. On the flip side, low inflation is generally seen as a sign of a healthy economy, where prices are stable, and people can plan for the future more confidently.</p>
+</div>
 <h3 style="text-align: center;">U.S. Inflation Rate (1914 - 2022)</h3>
 <p style="text-align: center;">Reload page and hover over each bar to see the exact rates.</p>
 <div id="bar-div"></div>
-<br><br><br><br><br><br>
+<div class="m6 w3-hide-small w3-padding-large w3-content w3-container w3-padding-64">
+    <p>Notice how the inflation rate is almost never negative, with the exception of the Great Depression. That is because during the Great Depression, economic activity plunged, causing prices to fall sharply as demand collapsed.</p>
+    <p>Negative inflation rates can be bad because they can lead to deflation, where prices continue to fall. Deflation can discourage spending because people expect prices to keep dropping, which can hurt businesses and lead to job losses.</p>
+    <p>Usually, inflation rates should stay at low positive values to support economic growth and stability. Moderate inflation encourages spending and investment, while also allowing for gradual wage increases.</p>
+    <p>A negative inflation rate usually follows a high inflation rate because when prices rise too quickly, central banks often step in to cool down the economy by raising interest rates. This can lead to a slowdown in economic activity, eventually causing prices to fall.</p>
+    <p>Next, we'll take a look at minimum wage.</p>
+    <p>Minimum wage is the lowest hourly wage that employers are legally required to pay their employees. It's designed to ensure that workers receive a fair wage for their labor and can afford the basic necessities of life. Minimum wage usually changes over time through legislation or adjustments made by government authorities to keep up with changes in the cost of living and economic conditions.</p>
+</div>
 <h3 style="text-align: center;">U.S. Minimum Wage (1939 - 2023)</h3>
-<p style="text-align: center;">Reload page and try hovering the dots.</p>
+<p style="text-align: center;">Reload page and try hovering over the dots.</p>
 <div id="line"></div>
-<br><br><br><br><br><br>
+<div class="m6 w3-hide-small w3-padding-large w3-content w3-container w3-padding-64">
+    <p>It makes sense that minimum wage only increases over time, and that corresponds with how inflation rates are mostly positive, so we are getting richer in the long run.</p>
+    <p>The dots plotted above represent changes in the minimum wage. There is a dot every time the minimum wage changes, with the exception of the oldest and newest dots.</p>
+    <p>Notice how the US minimum wage between 2009 and 2023 stays the same. That could be because the government did not pass any legislation to increase the minimum wage during that time period, possibly due to political or economic reasons.</p>
+    <p>And who knows? Will it change in the future?</p>
+    <p>Last but not least, here is a scatterplot of unemployment vs inflation rate.</p>
+    <p>Unemployment rate vs inflation rate is a comparison between the percentage of people who are unemployed and the rate at which prices of goods and services are increasing. Generally, when unemployment is high, inflation tends to be low, and vice versa. This relationship is known as the Phillips curve.</p>
+    <p>This scatterplot is also a test to validate if the Phillips curve is a valid theorem. It examines whether there is an inverse relationship between unemployment and inflation, as predicted by the Phillips curve theory.</p>
+</div>
 <h3 style="text-align: center;">U.S. Unemployment vs Inflation Rate (1947 - 2021)</h3>
 <p style="text-align: center;">Reload page and hover over each dot to see the year.</p>
 <button id="toggleCurve">Toggle Curve</button>
 <div id="scatterplot"></div>
+<div class="m6 w3-hide-small w3-padding-large w3-content w3-container w3-padding-64">
+    <p>This scatterplot challenges the validity of the Phillips curve. It indicates that the two variables are not consistently inversely related, thus casting doubt on the accuracy of the theory in today's economic context.</p>
+    <p>However, upon closer examination, we notice that certain outlier data points seem to align with the general shape of the Phillips curve. This suggests that while the theory may not hold true across all situations, there are instances where it still provides a useful framework for understanding economic dynamics.</p>
+    <p>This dynamic relationship underscores the fluid nature of our economy, constantly evolving in response to various factors such as technological advancements, globalization, and shifts in consumer behavior. Economic theories, while valuable, cannot capture the full complexity of human interactions and market dynamics.</p>
+    <p>Nevertheless, studying the patterns that emerge from economic data allows us to gain insights into the underlying forces driving our economy. It provides a window into the intricate interplay between economic policy, societal changes, and human aspirations, offering valuable lessons for navigating the complexities of the modern world.</p>
+</div>
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  <div class="w3-xlarge w3-section">
+  <!-- <div class="w3-xlarge w3-section">
     <i class="fa fa-github w3-hover-opacity"></i>
-  </div>
+  </div> -->
 </footer>
 
 <script>
