--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
             by Andrew Diep
         </span>
     </div>
+    <div class="w3-display-bottommiddle" style="bottom: 20%;">
+        <a href="#about" class="w3-button w3-xlarge w3-black" style="border-radius: 50%;">Start</a>
+    </div>
 </div>
 
 <!-- About -->
@@ -97,7 +100,7 @@
 </div>
 <h3 style="text-align: center;">Average GDP per Capita by Country (1970-2017)</h3>
 <p style="text-align: center;">Try hovering over each country to see more.</p>
-<svg id="world-map" width="1000" height="1200"></svg>
+<svg id="world-map" width="1000" height="800"></svg>
 <div class="m6 w3-hide-small w3-padding-large w3-content w3-container w3-padding-64">
     <p>When we compare the economic output of the United States to other nations, we see something remarkable: our country stands out as a beacon of prosperity. On average, we generate more income than many other countries, placing us among the wealthiest globally.</p>
     <p>Reflecting on this, we realize the privilege of living in a nation with such abundance. But let's not stop there—let's explore the diverse landscape of GDP across industries and government sectors.</p>
@@ -197,10 +200,12 @@
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
-  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  <!-- <div class="w3-xlarge w3-section">
-    <i class="fa fa-github w3-hover-opacity"></i>
-  </div> -->
+    <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+    <a href="https://github.com/andrewdiep1/dviz-final-project">
+        <div class="w3-xlarge w3-section">
+            <i class="fa fa-github w3-hover-opacity"></i>
+        </div>
+    </a>
 </footer>
 
 <script>
