Comment out start button

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
             by Andrew Diep
         </span>
     </div>
-    <div class="w3-display-bottommiddle" style="bottom: 20%;">
+    <!-- <div class="w3-display-bottommiddle" style="bottom: 20%;">
         <a href="#about" class="w3-button w3-xlarge w3-black" style="border-radius: 50%;">Start</a>
-    </div>
+    </div> -->
 </div>
 
 <!-- About -->
