Add reload graph button

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Beta Release</title>
+<title>Growth and Fluctuations</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -30,15 +30,16 @@
 <body>
 <div class="tooltip"></div>
 
- <!-- Navbar (sit on top) -->
- <div class="w3-top w3-black">
-  <div class="w3-bar" id="myNavbar">
-    <a href="#home" class="w3-bar-item w3-button">HOME</a>
-    <a href="#about" class="w3-bar-item w3-button w3-hide-small">ABOUT</a>
-    <a href="#gdp" class="w3-bar-item w3-button w3-hide-small">GDP</a>
-    <a href="#trade" class="w3-bar-item w3-button w3-hide-small">IMPORT/EXPORT</a>
-    <a href="#indicators" class="w3-bar-item w3-button w3-hide-small">INDICATORS</a>
-  </div>
+<!-- Navbar (sit on top) -->
+<div class="w3-top w3-black">
+    <div class="w3-bar" id="myNavbar">
+        <a href="#home" class="w3-bar-item w3-button">HOME</a>
+        <a href="#about" class="w3-bar-item w3-button w3-hide-small">ABOUT</a>
+        <a href="#gdp" class="w3-bar-item w3-button w3-hide-small">GDP</a>
+        <a href="#trade" class="w3-bar-item w3-button w3-hide-small">IMPORT/EXPORT</a>
+        <a href="#indicators" class="w3-bar-item w3-button w3-hide-small">INDICATORS</a>
+        <button id="reloadButton" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-refresh"></i> Reload Graph</button>
+    </div>
 </div>
 
 <!-- Home -->
