--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <p>GDP varies across sectors and government levels: State and Local Government GDP includes spending on things like education and roads within their areas; Federal Government GDP covers spending on defense, welfare, and infrastructure; Investments GDP includes spending on assets like stocks and real estate; Services GDP covers things like healthcare and finance; Goods GDP involves making tangible products like cars and crops. Understanding these differences helps us measure economic performance and make informed decisions for growth.</p>
 </div>
 <h3 style="text-align: center;">U.S. GDP Components (1970 - 2020)</h3>
-<p style="text-align: center;">Hover over the streams and observe growth overtime.</p>
+<p style="text-align: center;">Zoom and hover over the streams and observe growth overtime.</p>
 <div id="streamgraph"></div>
 <div class="m6 w3-hide-small w3-padding-large w3-content w3-container w3-padding-64">
     <p>Looking at the graph, we notice something interesting: the services sector generates much more GDP than both state and federal governments combined. This shows how important the services industry is for our economy.</p>
@@ -133,7 +133,7 @@
     <p>When there's a trade surplus, it means the US is making more money from exports than it's spending on imports. This can be good for the economy because it brings in more money from other countries.</p>
 </div>
 <h3 style="text-align: center;">U.S. Imports and Exports (2000 - 2021)</h3>
-<p style="text-align: center;">Reload page and try hovering over the dots.</p>
+<p style="text-align: center;">Try hovering over the dots.</p>
 <div id="multiline"></div>
 <div class="m6 w3-hide-small w3-padding-large w3-content w3-container w3-padding-64">
     <p>Have you noticed the sharp decline in the years 2008 and 2009? That dip coincided with the 2008 market crash, sending shockwaves through the global economy. As a result, both US imports and exports took a hit, causing ripple effects felt around the world.</p>
@@ -166,7 +166,7 @@
     <p>Understanding the inflation rate is crucial because it affects almost every aspect of the economy. High inflation can erode people's purchasing power, making it harder for them to afford things. It can also lead to uncertainty and instability in financial markets. On the flip side, low inflation is generally seen as a sign of a healthy economy, where prices are stable, and people can plan for the future more confidently.</p>
 </div>
 <h3 style="text-align: center;">U.S. Inflation Rate (1914 - 2022)</h3>
-<p style="text-align: center;">Reload page and hover over each bar to see the exact rates.</p>
+<p style="text-align: center;">Hover over each bar to see the exact rates.</p>
 <div id="bar-div"></div>
 <div class="m6 w3-hide-small w3-padding-large w3-content w3-container w3-padding-64">
     <p>Notice how the inflation rate is almost never negative, with the exception of the Great Depression. That is because during the Great Depression, economic activity plunged, causing prices to fall sharply as demand collapsed.</p>
@@ -177,7 +177,7 @@
     <p>Minimum wage is the lowest hourly wage that employers are legally required to pay their employees. It's designed to ensure that workers receive a fair wage for their labor and can afford the basic necessities of life. Minimum wage usually changes over time through legislation or adjustments made by government authorities to keep up with changes in the cost of living and economic conditions.</p>
 </div>
 <h3 style="text-align: center;">U.S. Minimum Wage (1939 - 2023)</h3>
-<p style="text-align: center;">Reload page and try hovering over the dots.</p>
+<p style="text-align: center;">Try hovering over the dots.</p>
 <div id="line"></div>
 <div class="m6 w3-hide-small w3-padding-large w3-content w3-container w3-padding-64">
     <p>It makes sense that minimum wage only increases over time, and that corresponds with how inflation rates are mostly positive, so we are getting richer in the long run.</p>
@@ -189,7 +189,7 @@
     <p>This scatterplot is also a test to validate if the Phillips curve is a valid theorem. It examines whether there is an inverse relationship between unemployment and inflation, as predicted by the Phillips curve theory.</p>
 </div>
 <h3 style="text-align: center;">U.S. Unemployment vs Inflation Rate (1947 - 2021)</h3>
-<p style="text-align: center;">Reload page and hover over each dot to see the year.</p>
+<p style="text-align: center;">Hover over each dot to see the year.</p>
 <button id="toggleCurve">Toggle Curve</button>
 <div id="scatterplot"></div>
 <div class="m6 w3-hide-small w3-padding-large w3-content w3-container w3-padding-64">
