Convert map svg to div

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a href="#gdp" class="w3-bar-item w3-button w3-hide-small">GDP</a>
         <a href="#trade" class="w3-bar-item w3-button w3-hide-small">IMPORT/EXPORT</a>
         <a href="#indicators" class="w3-bar-item w3-button w3-hide-small">INDICATORS</a>
-        <button id="reloadButton" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-refresh"></i> Reload Graph</button>
+        <button id="reloadButton" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-refresh"></i> Rebuild</button>
     </div>
 </div>
 
@@ -101,7 +101,7 @@
 </div>
 <h3 style="text-align: center;">Average GDP per Capita by Country (1970-2017)</h3>
 <p style="text-align: center;">Try hovering over each country to see more.</p>
-<svg id="world-map" width="1000" height="800"></svg>
+<div id="world-map"></div>
 <div class="m6 w3-hide-small w3-padding-large w3-content w3-container w3-padding-64">
     <p>When we compare the economic output of the United States to other nations, we see something remarkable: our country stands out as a beacon of prosperity. On average, we generate more income than many other countries, placing us among the wealthiest globally.</p>
     <p>Reflecting on this, we realize the privilege of living in a nation with such abundance. But let's not stop there—let's explore the diverse landscape of GDP across industries and government sectors.</p>
